fixed header img overflow & body img placing

--- a/queries.css
+++ b/queries.css
@@ -15,6 +15,11 @@
 }
 
 @media only screen and (min-width: 500px) {
+	.rights-img,
+	.take-it-img {
+		padding-left: 13rem;
+	}
+
 	.foot-nav a {
 		padding-left: 2rem;
 	}
@@ -29,12 +34,6 @@
 	.social-nav img {
 		width: 1.5rem;
 		height: auto;
-	}
-}
-
-@media only screen and (min-height: 700px) {
-	header {
-		background-size: cover;
 	}
 }
 
@@ -57,19 +56,14 @@
 
 	.take-it-img {
 		height: 20rem;
-		width: auto;
-		padding: 2rem 0 1rem 15rem;
 	}
 
 	.code-img {
 		width: 25rem;
-		height: auto;
 	}
 
 	.rights-img {
 		height: 30rem;
-		width: auto;
-		padding: 2rem 0 1rem 13rem;
 	}
 
 	footer {
@@ -82,6 +76,9 @@
 		font-size: 3rem;
 	}
 
+	.take-it-img {
+		padding-left: 20rem;
+	}
 	.rights-img {
 		padding-left: 20rem;
 	}
