--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
 		url('./img/remote.png');
 	background-position: 50% 30%;
 	background-repeat: no-repeat;
-	width: 100vw;
+	background-size: cover;
 	height: 55vh;
 }
 
@@ -140,22 +140,21 @@ a:active {
 /*------ABOUT----*/
 
 .take-it-img {
-	height: 10rem;
-	width: auto;
+	height: 15rem;
+	padding: 2rem 0 1rem 2rem;
 }
 
 /*------CONTACT----*/
 
 .code-img {
 	width: 15rem;
-	height: auto;
 }
 
 /*------JOIN----*/
 
 .rights-img {
 	height: 15rem;
-	width: auto;
+	padding: 2rem 0 1rem 4rem;
 }
 
 /*--------------*/
